min width on char sheet to prevent it breaking on smaller size

--- a/D&D_5e_Shaped/D&D_5e.css
+++ b/D&D_5e_Shaped/D&D_5e.css
@@ -4,6 +4,9 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.sheet-overall-wrapper {
+  min-width: 832px;
+}
 
 button[type=roll]:before {
   vertical-align: middle;
